# mcp-code-index

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: AGENT_SETUP.md
examples/opencode-plugin/: README.md  code-index-reindex.js
skills/code-search/: SKILL.md
src/code_index/: __init__.py  cli.py  config.py  indexer.py  progress.py  registry.py  semantic.py  server.py  store.py  symbols.py  walker.py  watcher.py  webui.py
tests/: conftest.py  test_cli_search.py  test_indexer.py  test_progress.py  test_registry.py  test_semantic.py  test_server.py  test_store.py  test_symbols.py  test_walker.py  test_watcher.py  test_webui.py
