[project]
name = "code-index-mcp"
version = "0.1.0"
description = "Self-hosted hybrid code search MCP server (SQLite FTS5 + tree-sitter symbols + Qdrant semantic) for Kilo CLI / OpenCode"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    # tree-sitter core + language grammars (no LSP, no external services)
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=0.7.0",
    # local embeddings (no network); used only for the semantic layer
    "fastembed>=0.4.0",
    # Qdrant client (you already run Qdrant locally)
    "qdrant-client>=1.12.0",
    # native filesystem watching for auto re-index
    "watchdog>=4.0.0",
    # terminal progress bars / status dashboard (light on CPU/RAM)
    "rich>=13.0.0",
    # TOML reader for the external project registry (stdlib tomllib on 3.11+)
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
code-index = "code_index.cli:main"
code-index-mcp = "code_index.server:main"
code-index-watch = "code_index.watcher:main"

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_index"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
